--- a/Project_display/start.html
+++ b/Project_display/start.html
@@ -4,39 +4,90 @@
 	</head>
 
 	<style >
+
+		body{
+			font-family: 'Arial',sans-serif;
+			background: linear-gradient(135deg,#ff9a9e,#fad0c4);
+			margin: 0;
+			padding: 0;
+			display: flex;
+			justify-content: center;
+			align-items: center;
+			height: 100vh;
+			overflow: hidden;
+		}
 		
 		#bar{
-			height: 670px;
-			background-color: mediumpurple;
-			color: floralwhite;
-			padding: 4px;
-			border-radius: 40px;
+			height: 500px;
+			width: 80%;
+			background: linear-gradient(145deg,#6a11cb,#2575fc);
+			color: white;
+			border-radius: 20px;
+			box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
 			display: flex;
 			flex-direction: column;
 			align-items: center;
 			justify-content: center;
+			padding: 20 px;
+			animation: fadeIn 2s ease-in-out;
 			text-align: center;
 		}
-		#button{
-			background-color: blueviolet;
-			font-size: 50px;
-			color: whitesmoke;
-			width: 150px;
-			text-align: center;
-			padding: 4px;
-			border-radius: 4px;
-			text-decoration: none;
-			display: inline-block;
 
+		#bar h1{
+			font-size: 80px;
+			margin: 0;
+			background: -webkit-linear-gradient(45deg,#ffdd00,#fbb034);
+			-webkit-background-clip: text;
+			-webkit-text-fill-color: transparent;
+			animation: slideIn 1.5s ease-out;
+		}
+		#button{
+			background: linear-gradient(45deg,#ff8a00,#e52e71);
+			font-size: 30px;
+			color: white;
+			width: 200px;
+			text-align: center;
+			padding: 15px 20px;
+			border-radius: 50px;
+			text-decoration: none;
+			margin-top: 20px;
+			transition: transform 0.3s ease, box-shadow 0.3 ease;
+		}
+
+		#button:hover{
+			transform: scale(1.1);
+			box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.3);
+		}
+
+		@keyframes fadeIn{
+			from{
+				opacity: 0;
+				transform: scale(0.9);
+			}
+			to{
+				opacity: 1;
+				transform: scale(1);
+			}
+		}
+
+		@keyframes slideIn{
+			from{
+				transform: translateY(-50px);
+				opacity: 0;
+			}
+			to{
+				transform: translateY(0);
+				opacity: 1;
+			}
 		}
 	</style>
 
-	<body style="font-family: tahoma; background-color: rosybrown;">
-		<div id="bar">
+	<body>
 
-		<div style="font-size: 100px;text-align: center;">My Projects</div>
-		<a id="button" href="end.html">View</a>
+		<div id="bar">
+			<h1>My Projects</h1>
+			<a id="button" href="end.html">View</a>
 		</div>
-	</body>
+</body>
 
 </html>
