--- a/Project_display/start.html
+++ b/Project_display/start.html
@@ -20,7 +20,7 @@
 		#bar{
 			height: 500px;
 			width: 80%;
-			background: linear-gradient(145deg,#6a11cb,#2575fc);
+			background: linear-gradient(145deg,#EB7636,#EB2C06);
 			color: white;
 			border-radius: 20px;
 			box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
@@ -36,7 +36,7 @@
 		#bar h1{
 			font-size: 80px;
 			margin: 0;
-			background: -webkit-linear-gradient(45deg,#ffdd00,#fbb034);
+			background: -webkit-linear-gradient(45deg,#D0C937,#EB6A2E);
 			-webkit-background-clip: text;
 			-webkit-text-fill-color: transparent;
 			animation: slideIn 1.5s ease-out;
@@ -44,7 +44,7 @@
 		#button{
 			background: linear-gradient(45deg,#ff8a00,#e52e71);
 			font-size: 30px;
-			color: white;
+			color: darksalmon;
 			width: 200px;
 			text-align: center;
 			padding: 15px 20px;
