--- a/Project_display/end.html
+++ b/Project_display/end.html
@@ -7,6 +7,7 @@
 			background: linear-gradient(to bottom, #8B5E83, #6A4B83);
 			text-align: center;
 			color: floralwhite;
+			animation: fadeIn 1.5s ease-in-out forwards;
 		}
 
 		html {
@@ -23,6 +24,9 @@
 			box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
 			transition: transform 0.3s;
 			text-align: center;
+			opacity: 0;
+			animation: fadeIn 2s ease-in-out forwards;
+			animation-delay: 0.5s;
 		}
 
 		.project-card:hover {
@@ -57,6 +61,14 @@
 			margin: 20px auto;
 			text-align: center;
 			width: 60%;
+		}
+		@keyframes fadeIn{
+			from{
+				opacity: 0;
+			}
+			to{
+				opacity: 1;
+			}
 		}
 
 		audio {
